Criação do Projeto Modelo e Persistência inicial

--- a/DDDa/DDDa/Views/Categorias/Index.cshtml
+++ b/DDDa/DDDa/Views/Categorias/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DDDa.Models.Tabelas.Categoria>
+﻿@model IEnumerable<Modelo.DDDa.Tabelas.Categoria>
 
 @{
     ViewBag.Title = "Index";
